tests/More/Good/11.tig
/* nested comment */
let
	var x:int := 0
in
	/*hey look! a  /*nested*/ comment! */
end
