tests/More/Bad/5.tig
/* Type mismatch */
let
	var a:int := 7
	var b:string := "blah"
in
	a := b
end


